# fishmlserv

./: .Dockerfile.swp  Dockerfile  MANIFEST.in  README.md  fly.toml  pyproject.toml  r.txt
LB/: default.conf
dags/: fish_std.py
note/: Untitled.ipynb  Untitled1.ipynb  fish.ipynb  model.pkl  ss.ipynb  ss.py
src/fishmlserv/: .pre.py.swp  cli.py  data.py  main.py  pre.py
src/fishmlserv/model/: manager.py  model.pkl
src/fishmlserv/rest/: get.py
