[project]
name = "fishmlserv"
version = "1.0.0"
description = "Default template for PDM package"
authors = [
    {name = "DONGUK777", email = "kimdongyork@gmail.com"},
]
dependencies = [
]

requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
ppping = 'fishmlserv.cli:ppping'
get-model-path = 'fishmlserv.cli:model_path'
pp = 'fishmlserv.cli:pp'
ppp = 'fishmlserv.cli:ppp'

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
note = [
    "notebook>=7.2.2",
    "matplotlib>=3.7.5",
]
